tests/invalid/vars_in_wrong_places.err_exp
vars_in_wrong_places.m:002: Error: atom expected in clause head: _1 :- blah.
vars_in_wrong_places.m:003: Error: atom expected in equation head: _1 = 42.
vars_in_wrong_places.m:004: Error: atom expected in equation head: _1 = 42.
Error: atom expected in `:- pred' declaration: _1.
vars_in_wrong_places.m:006: Error: atom expected in `:- func' declaration: _1 = int.
Error: atom expected in `:- mode' declaration: _1.
vars_in_wrong_places.m:008: Error: atom expected in function `:- mode' declaration: _1 = int.
vars_in_wrong_places.m:001: Warning: interface for module
vars_in_wrong_places.m:001:   `vars_in_wrong_places' does not export anything.
vars_in_wrong_places.m:001: To be useful, a module should export something. A
vars_in_wrong_places.m:001:   file should contain at least one declaration
vars_in_wrong_places.m:001:   other than `:- import_module' in its interface
vars_in_wrong_places.m:001:   section(s). This would normally be a `:- pred',
vars_in_wrong_places.m:001:   `:- func', `:- type', `:- inst' or `:- mode'
vars_in_wrong_places.m:001:   declaration.
